# Kursovoiy_Proekt

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: ABOUT.md
src/vuln_mgmt/: __init__.py  app.py  main.py
src/vuln_mgmt/core/: config.py  container.py  database.py  dependencies.py  logging.py  telemetry.py
src/vuln_mgmt/domain/: __init__.py  entities.py  errors.py  risk.py
src/vuln_mgmt/infrastructure/clients/: nvd.py
src/vuln_mgmt/infrastructure/db/: models.py
src/vuln_mgmt/infrastructure/repositories/: base.py  memory.py  sqlalchemy.py
src/vuln_mgmt/routers/: assets.py  dashboard.py  health.py  remediations.py  vulnerabilities.py
src/vuln_mgmt/schemas/: assessments.py  assets.py  health.py  remediations.py  vulnerabilities.py
src/vuln_mgmt/services/: assessment.py  assets.py  demo.py  health.py  remediations.py  vulnerabilities.py
src/vuln_mgmt/ui/: app.js  index.html  styles.css
tests/: conftest.py
tests/api/: test_api.py
tests/unit/: test_risk.py  test_services.py
