[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vuln-mgmt"
version = "0.1.0"
description = "Course project for vulnerability management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "aiosqlite>=0.20,<1.0",
  "httpx>=0.27,<1.0",
  "opentelemetry-api>=1.26,<2.0",
  "opentelemetry-sdk>=1.26,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.47b0,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=5.0,<7.0",
  "coverage>=7.5,<8.0",
  "bandit>=1.7,<2.0",
  "ruff>=0.5,<1.0",
  "black>=24.0,<25.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
